src/test/deca/syntax/valid/personal/this_object_usage.deca
// Description:
//    test minimaliste utilisant le mecanisme de this. et object.
//
// Resultats:
//
//
//
// Historique:
//    cree le 14/01/2025


class A {
    int x;
    int y;
    void affect(int x,A a){
        this.x=x;
        this.y=a.y;
    }
    void copy(A a){
        this.affect(3,a);
        affect(3,a);
    }

}
