src/test/deca/syntax/invalid/personal/new_with_arguments.deca
// Description:
//   utiliser new avec parametre
//
// Resultats:
// erreur
//
//
// Historique:
//    cree le 14/01/2025

class A{
   int a;
}

{
    A a = new A(3);
}

